Fixed spacing

--- a/assets/bundle.css
+++ b/assets/bundle.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-    margin: 2rem 1rem;
+    margin: 1.5rem 1rem 2rem;
 }
 
 a:visited {
